# lesson_27_HW

./: db.sqlite3  manage.py  pyproject.toml  pytest.ini
ads/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_adsmodel_description_and_more.py  0002_initial.py  0002_location_remove_adsmodel_author_adsmodel_category_id_and_more.py  0003_rename_location_locationmodel_rename_user_usermodel_and_more.py  0004_remove_adsmodel_address.py  0005_remove_usermodel_location_id_alter_adsmodel_options_and_more.py
ads/views/: ad_views.py  cat_views.py
datasets/: ad.csv  ads.json  categories.json  location.csv  script.py  user.csv
fixtures/: ad.json  category.json  location.json  user.json
lesson_27_homework/: asgi.py  settings.py  urls.py  wsgi.py
selections/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
selections/migrations/: 0001_initial.py
tests/: conftest.py  factories.py  fixtures.py
tests/ads_tests/: ads_create_test.py  ads_detail_test.py  ads_list_test.py
tests/selections_tests/: selections_create_test.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_rename_location_id_usermodel_location.py  0003_alter_locationmodel_lat_alter_locationmodel_lng.py
