[tool.poetry]
name = "lesson_27_homework"
version = "0.1.0"
description = ""
authors = ["yesha999 <scrolltrip@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
